--- a/styles.css
+++ b/styles.css
@@ -196,6 +196,13 @@ fawaz {
   text-align: center;
   overflow: scroll;
 
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none;  /* Firefox */
+
+}
+.Introparagragh::-webkit-scrollbar{
+  display: none;
+
 }
 
 
@@ -274,39 +281,26 @@ fawaz {
 
 /* ---------------------------Project Section & Involved CSS --------------------------*/
 .card {
-
-
   display: flex;
-
-
   margin-left: 5%;
   margin-right: 5%;
-
-
-
   overflow: scroll;
-
-
-
   justify-content: center;
   align-content: center;
-
   min-width: 90%;
   max-height: 150px;
-
   border-radius: 8px;
   text-decoration: none;
   background-color: rgb(0, 0, 0);
-
   background: linear-gradient(rgb(0, 0, 0), rgb(0, 0, 0)) padding-box,
     linear-gradient(to right, #346e9d45, #ffdd5652 180%) border-box;
   border-radius: 10px;
   border: 1.5px solid transparent;
-
-
-
-
-
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none;  /* Firefox */
+}
+.card::-webkit-scrollbar{
+  display: none;
 }
 
 .card:hover,
@@ -438,7 +432,12 @@ fawaz {
     linear-gradient(to right, #659ad264, #0043825b 180%) border-box;
   border-radius: 10px;
   border: 1.5px solid transparent;
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none;  /* Firefox */
+}
 
+.card2::-webkit-scrollbar{
+  display: none;
 }
 
 @media screen and (max-width: 1156px) {
